2003-12-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* libtests.am: Add dirstamp support.

2003-12-17	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* libtests.am: Use $(mkdir_p) instead of $(mkinstalldirs).

2003-12-16	Joel Sherrill <joel@OARcorp.com>

	PR 544/tests
	* malloctest/system.h, rtmonuse/system.h: Various modifications to make
	tests account for resources and not print at inappropriate times.

2003-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Require automake >= 1.8, autoconf >= 2.59.

2003-12-01	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* cpuuse/Makefile.am: Remove all-local: $(ARCH).
	* malloctest/Makefile.am: Remove all-local: $(ARCH).
	* monitor/Makefile.am: Remove all-local: $(ARCH).
	* putenvtest/Makefile.am: Remove all-local: $(ARCH).
	* rtems++/Makefile.am: Remove all-local: $(ARCH).
	* rtmonuse/Makefile.am: Remove all-local: $(ARCH).
	* stackchk/Makefile.am: Remove all-local: $(ARCH).
	* termios/Makefile.am: Remove all-local: $(ARCH).

2003-11-10	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Reflect having moved to testsuites/.

2003-10-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove RTEMS_CANONICAL_HOST.

2003-10-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac:Remove RTEMS_CHECK_CPU.

2003-09-04	Joel Sherrill <joel@OARcorp.com>

	* cpuuse/init.c, cpuuse/system.h, cpuuse/task1.c, cpuuse/task2.c,
	cpuuse/task3.c, cpuuse/tswitch.c, malloctest/init.c,
	malloctest/system.h, malloctest/task1.c, monitor/init.c,
	monitor/system.h, putenvtest/init.c, rtems++/Init.cc,
	rtems++/System.h, rtems++/Task1.cc, rtems++/Task2.cc,
	rtems++/Task3.cc, rtems++/rtems++.doc, rtmonuse/getall.c,
	rtmonuse/init.c, rtmonuse/system.h, rtmonuse/task1.c,
	stackchk/blow.c, stackchk/init.c, stackchk/system.h,
	stackchk/task1.c: URL for license changed.

2003-08-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved aclocal/.

2003-08-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
